Updated gitignore to properly ignore art folder

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /[Aa]ssets/[Tt]utorialInfo/
-/[Aa]ssets/[Aa]rt/
+/[Aa]ssets/_Game/[Aa]rt/
